# Data-Science-Learning

./: README.md
ARIMA vs SARIMA vs LSTM/: time_series_walkthrough.ipynb  venv.yml
ARIMA vs SARIMA vs LSTM/micromamba/: README.md  time_series_walkthrough.ipynb  venv.yml
ARIMA vs SARIMA vs LSTM/poetry/: README.md  pyproject.toml  time_series_walkthrough.ipynb  time_series_walkthrough_v1.ipynb
Darts Quickstart/: README.md  darts_quickstart.ipynb  pyproject.toml
